RESOLVED FIXED247789
new-target Syntax Error
https://bugs.webkit.org/show_bug.cgi?id=247789
Summary new-target Syntax Error
Kanguk Lee
Reported 2022-11-11 01:20:20 PST
// input.js class x { static { if ( 0 ?. [ { [ Symbol . toPrimitive ] : x => super [ new . target ( ) ] } ] ** 0 ) ; } } _____________________________________________________________________________________________________________ Hello, Executing the input.js using JSC throws SyntaxError, but TypeError is expected. Running the input.js with JSC results in: --- $ jsc input.js Exception: SyntaxError: new.target is not valid inside arrow functions in global code. at input.js:1 --- while other engines behave like: --- # V8 (used console.log) $ node input.js input.js:1 class x { static { if ( 0 ?. [ { [ Symbol . toPrimitive ] : x => super [ new . target ( ) ] } ] ** 0 ) ; } } ^ TypeError: .new.target is not a function ... Node.js v18.11.0 # GraalJS $ js input.js TypeError: <new.target> is not a function at <js> :=>(input.js:1:73-88) at <js> :initializer(input.js:1:24-94) at <js> :program(input.js:1:0-107) --- WebKit version: 615.1.10
Attachments
Radar WebKit Bug Importer
Comment 1 2022-11-14 09:27:39 PST
Yijia Huang
Comment 2 2022-11-14 18:32:50 PST
EWS
Comment 3 2022-11-15 09:48:27 PST
Committed 256700@main (9a3c9a17863e): <https://commits.webkit.org/256700@main> Reviewed commits have been landed. Closing PR #6500 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.